# DRP

./: .gitignore  pyproject.toml
.github/workflows/: android-pages.yml  backend-cd.yml  backend-ci.yml
android/: settings.gradle.kts
android/app/: build.gradle.kts  google-services.json
android/app/src/androidTest/java/com/drp33/quietsignal/: ExampleInstrumentedTest.kt
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/drp33/quietsignal/: AdultScreen.kt  AdultState.kt  AdultViewModel.kt  MainActivity.kt  PushNotificationService.kt
android/app/src/main/java/com/drp33/quietsignal/data/: AdultState.kt
android/app/src/main/java/com/drp33/quietsignal/model/: AdultState.kt  ElderlyUIState.kt  NotificationBus.kt  UserRole.kt
android/app/src/main/res/values/: strings.xml  themes.xml
android/app/src/test/java/com/drp33/quietsignal/: ExampleUnitTest.kt
android/gradle/: libs.versions.toml
android/gradle/wrapper/: gradle-wrapper.properties
backend/: .coverage  .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  dev.db  main.py  pyproject.toml  requirements-dev.txt  requirements.txt
backend/app/: crud.py  db.py  main.py  models.py  settings.py
backend/app/services/: firebase.py  notifications.py
backend/backend.egg-info/: PKG-INFO  requires.txt
backend/flux/: deployment.yaml  httproute.yaml  image-update.yaml  kustomization.yaml  service.yaml
backend/tests/: test_main.py
flux/: cnpg.yaml  deployment.yaml  image-update.yaml  kustomization.yaml  route.yaml  service.yaml
public-site/: index.html  style.css
(+21 files in other folders)
