[project]
name = "backend"
version = "0.1.0"
requires-python = ">=3.14"

dependencies = [
    "fastapi[standard]==0.136.3",
    "uvicorn[standard]==0.48.0",
    "pydantic-settings==2.14.1",

    #DB
    "sqlmodel==0.0.38",
    "psycopg[binary]==3.3.4",
]

[project.optional-dependencies]
dev = [
    "ruff",
    "mypy",
    "codespell",
    "pytest",
    "pytest-cov",
    "httpx",
]

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

# -------------------
# Tool configs
# -------------------

[tool.setuptools]
packages = ["app"]

[tool.ruff]
line-length = 160
target-version = "py314"
src = ["app", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.mypy]
python_version = "3.14"
files = ["app"]
disallow_untyped_defs = true
no_implicit_optional = true
check_untyped_defs = true
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]